fix(): container overflow

--- a/src/App.css
+++ b/src/App.css
@@ -77,7 +77,7 @@
 }
 
 .manage-questions > div {
-  flex: 1 0 50%;
+  flex: 1 1 50%;
 }
 
 .manage-category {
